Update .env with sample data

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+GOOGLE_CLIENT_ID=***Your Google OAuth client ID***
+GOOGLE_CLIENT_SECRET=***Your Google OAuth client secret***
+CALLBACK_URL=http://localhost:3000/auth/callback
+PORT=3000
